Projet maven multimodule + jpms

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,29 @@
 /projet-multi-module-maven/service/.project
 /projet-multi-module-maven/service/.settings
 /projet-multi-module-maven/service/target
+
+
+/projet-multi-module-maven-jpms/.project
+/projet-multi-module-maven-jpms/.settings
+/projet-multi-module-maven-jpms/common/.classpath
+/projet-multi-module-maven-jpms/common/.project
+/projet-multi-module-maven-jpms/common/.settings
+/projet-multi-module-maven-jpms/common/target/
+/projet-multi-module-maven-jpms/dao/.classpath
+/projet-multi-module-maven-jpms/dao/.project
+/projet-multi-module-maven-jpms/dao/.settings
+/projet-multi-module-maven-jpms/dao/target
+/projet-multi-module-maven-jpms/data/.classpath
+/projet-multi-module-maven-jpms/data/.project
+/projet-multi-module-maven-jpms/data/.settings
+/projet-multi-module-maven-jpms/data/target
+/projet-multi-module-maven-jpms/endpoint/.classpath
+/projet-multi-module-maven-jpms/endpoint/.project
+/projet-multi-module-maven-jpms/endpoint/.settings
+/projet-multi-module-maven-jpms/endpoint/target
+/projet-multi-module-maven-jpms/service/.classpath
+/projet-multi-module-maven-jpms/service/.project
+/projet-multi-module-maven-jpms/service/.settings
+/projet-multi-module-maven-jpms/service/target
+
+**/.settings
