--- a/projet-multi-module-maven-jpms/pom.xml
+++ b/projet-multi-module-maven-jpms/pom.xml
@@ -14,6 +14,7 @@
   <description>Poc modularité - multi module maven</description>
   <properties>
     <java.version>11</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
   <dependencies>
@@ -52,11 +53,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
     </pluginManagement>
 </build>
+
 </project>
