--- a/projet-multi-module-maven/data/pom.xml
+++ b/projet-multi-module-maven/data/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.frederic.enee</groupId>
+    <groupId>com.frederic.enee.multi-module</groupId>
     <artifactId>projet-multi-module-maven</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
@@ -10,7 +10,7 @@
   
   <dependencies>
   	<dependency>
-			<groupId>com.frederic.enee</groupId>
+			<groupId>com.frederic.enee.multi-module</groupId>
 			<artifactId>common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 	</dependency>
