--- a/projet-multi-module-maven/pom.xml
+++ b/projet-multi-module-maven/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.7.0</version>
   </parent>
-  <groupId>com.frederic.enee</groupId>
+  <groupId>com.frederic.enee.multi-module</groupId>
   <artifactId>projet-multi-module-maven</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -40,4 +40,18 @@
   	<module>service</module>
   	<module>endpoint</module>
   </modules>
+  <build>
+    <pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </pluginManagement>
+</build>
 </project>
